[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ui/world_browser/world_panel.gd" type="Script" id=2]

[node name="WorldPanel" type="Panel"]
margin_right = 604.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 8

[node name="IconTextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="InfoContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 56.0
margin_right = 322.0
margin_bottom = 48.0

[node name="NameLabel" type="Label" parent="HBoxContainer/InfoContainer"]
margin_right = 266.0
margin_bottom = 14.0
text = "World name"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/InfoContainer"]
margin_top = 18.0
margin_right = 266.0
margin_bottom = 32.0
text = "World description description description"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
margin_left = 492.0
margin_top = 8.0
margin_right = 588.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 32 )
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Join"
